--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -23,14 +23,16 @@
               Sign up <span>▼</span>
             </a>
             <div id="signup-content">
-              <form name="myForm" id="contactForm" method="post" placeholder="Name">
+              <form>
                 <fieldset id="inputs">
-                 <input type="text" name="name" class="form-control" placeholder="Nome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                 <input type="text" name="name" class="form-control" placeholder="Cognome" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-    			 <input type="email" class="form-control" name="email" placeholder="Email" data-rule="email" data-msg="Please enter a valid email" />
+                 <input type="text" pattern="^([a-zA-Z]+[']?)?[a-zA-Z]{2,}[àèìòùÀÈÍÓÚ]?$" placeholder="Nome" id="name"class="form-control" formControlName="name"required/>
+                 <input type="text"  pattern="^([a-zA-Z]+[']?)?[a-zA-Z]{2,}[àèìòùÀÈÍÓÚ]?$"placeholder="Cognome" id="cognome"class="form-control"formControlName="cognome"required />
+                  <input type="number" placeholder="Telefono"required pattern="\b(\d{8}|\d{9}|\d{10})\b" />
+                 <input type="email" placeholder="Email" class="form-control" formControlName="email" required />
+                 <input id= "data" type="date"placeholder="date">
                 </fieldset>
                 <fieldset id="actions">
-                  <input type="submit" id="submit" value="Sign Up">
+                  <input type="submit" id="submit" (click)="registrami()"value="Sign Up">
                 </fieldset>
               </form>
             </div>
