--- a/src/app/utente/utente.component.html
+++ b/src/app/utente/utente.component.html
@@ -1,3 +1,14 @@
-<p>
-  utente works!
-</p>
+<p>Eventi del giorno</p>
+<div class="table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Autore</th>
+                    <th>Titolo</th>
+                    <th>Descrizione</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
