--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: 'Roboto', sans-serif; }
+body { margin: 0; font-family: 'Roboto', sans-serif;background-image: url(https://mysticmindpower.com/wp-content/uploads/1439643304_maxresdefault.jpg);
+  height: 100%;
+  width: auto;
+  background-repeat: no-repeat;}
