--- a/src/app/utente/utente.component.html
+++ b/src/app/utente/utente.component.html
@@ -1,14 +1,31 @@
-<p>Eventi del giorno</p>
+
+<button (click)="caricaeventi()">Carica eventi</button>
+<button (click)="caricanotizie()">Carica notizie</button>
+
+<button (click)="redirect()">Home</button>
+
 <div class="table-responsive">
-        <table class="table">
+        <table id="tableUno">
             <thead>
                 <tr>
-                    <th>Autore</th>
-                    <th>Titolo</th>
-                    <th>Descrizione</th>
+                    <th class="eventi">Evento</th>
+                    <th class="eventi">Data e Orario</th>
                 </tr>
             </thead>
             <tbody>
             </tbody>
         </table>
+
+        <div class="tableDue">
+                <table id="tableDue">
+                    <thead>
+                        <tr>
+                            <th class="articoli">Titolo</th>
+                            <th class="articoli">Testata</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+
     </div>
